added missing home url

--- a/recipes/r-bio3d/meta.yaml
+++ b/recipes/r-bio3d/meta.yaml
@@ -42,7 +42,7 @@ test:
     - "\"%R%\" -e \"library('bio3d')\""  # [win]
 
 about:
-  home: http
+  home: http://bitbucket.org/Grantlab/bio3d
   license: GPL (>= 2)
   summary: Utilities to process, organize and explore protein structure, sequence and dynamics
     data. Features include the ability to read and write structure, sequence and dynamic
